change province to province/region

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -44,7 +44,7 @@
   "Adresse": "Address Line 1",
   "Adressesuite": "Address Line 2",
   "Pays": "Country",
-  "Province": "State / Province",
+  "Province": "Province / Region",
   "Ville": "City",
   "Codepostal": "Postal Code",
 
