--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -44,7 +44,7 @@
   "Adresse": "Address",
   "Adressesuite": "Address (suite)",
   "Pays": "Pays",
-  "Province": "Province",
+  "Province": "Province / Région",
   "Ville": "Ville",
   "Codepostal": "Code postal",
 
