add promocode on checkout

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -61,7 +61,9 @@
   "Total": "Total",
   "produit": "product",
   "produits": "products",
-  "Soustotal": "Subtotal :",
+  "Soustotal": "Subtotal",
+  "Discountof": "Discount of",
+  "SoustotalAfterDiscount": "Subtotal after discount",
   "Resumedevotrefacture": "Bill's Details",
   "Jailuetjaccepte": "I've read and accept Terms and Conditions",
   "Payeretcommander": "Pay and Order",
