--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -61,7 +61,9 @@
   "Total": "Total",
   "produit": "produit",
   "produits": "produits",
-  "Soustotal": "Sous-total :",
+  "Soustotal": "Sous-total",
+  "Discountof": "Rabais de",
+  "SoustotalAfterDiscount": "Sous-total après rabais",
   "Resumedevotrefacture": "Résumé de votre facture",
   "Jailuetjaccepte": "J'ai lu et j'accepte les Termes et conditions",
   "Payeretcommander": "Payer et commander",
