--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -74,5 +74,9 @@
   "PromoCodes": "Codes promotionnels",
   "AppliedPromoCodes": "Codes promotionnels appliqués",
   "Enteryourcodehere": "Entrer votre code ici",
-  "Add": "Ajouter"
+  "Add": "Ajouter",
+
+  "PasswordReset": "Réinitialisation du mot de passe",
+  "Password": "Mot de passe",
+  "PasswordConfirm": "Confirmation du mot de passe"
 }
