--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -13,6 +13,7 @@
   "Codenotexist": "This code is expired.",
   "Codealreadyused": "You've already claimed this code.",
   "Codeaddedsuccess": "Code added successfully!",
+  "Thisemailexist": "A customer already exist with this email.",
 
   "Profil": "Profile",
   "Salutation": "Salutation",
