--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -13,6 +13,7 @@
   "Codenotexist": "Ce code est expiré.",
   "Codealreadyused": "Vous avez déjà utilisé ce code.",
   "Codeaddedsuccess": "Code ajouté avec succès !",
+  "Thisemailexist": "Un client existe déjà avec ce courriel.",
 
   "Profil": "Profil",
   "Salutation": "Salutation",
