fix discounts discounted price and promocodes

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -15,6 +15,7 @@
   "Codealreadyused": "You've already claimed this code.",
   "Codeinapplicable": "This code is inapplicable to this order.",
   "Codeaddedsuccess": "Code added successfully!",
+  "Notapplicableondiscounted": "Not applicable on products already discounted.",
   "Thisemailexist": "A customer already exist with this email.",
 
   "Profil": "Profile",
