--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -15,6 +15,7 @@
   "Codealreadyused": "Vous avez déjà utilisé ce code.",
   "Codeinapplicable": "Ce code n'est pas applicable à cette commande.",
   "Codeaddedsuccess": "Code ajouté avec succès !",
+  "Notapplicableondiscounted": "Non applicable sur les produits déjà en promotion.",
   "Thisemailexist": "Un client existe déjà avec ce courriel.",
 
   "Profil": "Profil",
