--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -2258,3 +2258,6 @@ msgstr "Utiliser l'adresse de livraison pour la facturation"
 
 msgid "Shipping ID"
 msgstr "ID de livraison"
+
+msgid "Shipped"
+msgstr "Livré"
