Local text translation

--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -2270,3 +2270,8 @@ msgstr "Appliquer au total du panier"
 
 msgid "Check to apply this promocode on the cart's total instead of individual product."
 msgstr "Cocher pour appliquer ce code promotionnel au total du panier plutôt qu'aux produits individuellement."
+
+#: /dshop/admin.py:619
+msgid "Convertir en variable"
+msgstr "Convertir en variable"
+
