--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -2354,3 +2354,6 @@ msgstr "Épuisé"
 
 msgid "Testimonial"
 msgstr "Témoignage"
+
+msgid "Type your search here"
+msgstr "Écrire votre recherche ici"
