update i18n + quotations list

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -88,10 +88,21 @@
   "PasswordConfirm": "Password Confirmation",
 
   "YourQuotation": "Your Quotation",
+  "MyQuotations": "My Quotations",
   "Cart": "Cart",
   "Product": "Product",
   "Quantity": "Quantity",
   "Remove": "Remove",
   "Thanksforquotation": "Your quotation has been successfully send",
-  "Thanks": "Thanks"
+  "Thanks": "Thanks",
+
+  "Created": "Created",
+  "Submitted": "Submitted",
+  "Approved": "Approved",
+  "Ordered": "Ordered",
+  "Rejected": "Rejected",
+  "Unknown": "Unknown",
+  
+  "LastUpdate": "Last Update",
+  "Thisquotationnotexist": "This quotation doesn't exist"
 }
