update BlockSales plugin to add PerLine block

--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -2766,3 +2766,5 @@ msgstr "Groupe de filtres"
 msgid "Product's Filter Groups"
 msgstr "Groupes de filtres"
 
+msgid "How many block per line?"
+msgstr "Combien de bloc par ligne ?"
