--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -317,8 +317,12 @@ msgid "Shipping"
 msgstr "Livraison"
 
 #: apps/dmBillingStripe/views.py:86
-msgid "Credit Card (Stripe)"
-msgstr "Carte de crédit (Stripe)"
+msgid "Credit Card (via Stripe)"
+msgstr "Carte de crédit (via Stripe)"
+
+#:
+msgid "Credit Card (via Square)"
+msgstr "Carte de crédit (via Square)"
 
 #: apps/dmContact/apps.py:7 dshop/templates/dshop/pages/base.html:175
 msgid "Contact"
