update Charts + add API calls

--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -104,5 +104,17 @@
   "Unknown": "Inconnu",
 
   "LastUpdate": "Dernière mise à jour",
-  "Thisquotationnotexist": "Ce devis n'existe pas"
+  "Thisquotationnotexist": "Ce devis n'existe pas",
+
+  "Incomes": "Revenus",
+  "Income": "Revenu",
+  "Price": "Prix",
+  "Stocks": "Inventaires",
+  "NewCustomers": "Nouveaux clients",
+  "OrdersCount": "Nombre de commandes",
+  "AwaitingOrders": "Commandes en attente",
+  "MonthlyIncomes": "Revenus mensuels",
+  "CurrentWeekIncomes": "Revenus de la semaine",
+  "IncomesByLocation": "Revenus par localisation",
+  "MonthBestsellers": "Meilleures ventes du mois"
 }
