--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -3574,3 +3574,20 @@ msgstr "Personnalisations"
 
 msgid "Discount Type"
 msgstr "Type de rabais"
+
+
+#: contact.html
+msgid "Adresse"
+msgstr "Address"
+
+msgid "Courriel"
+msgstr "Email"
+
+msgid "Téléphone"
+msgstr "Phone"
+
+msgid "Contactez-nous"
+msgstr "Contact us"
+
+msgid "Remplissez ce formulaire pour nous contacter."
+msgstr "Fill out this form to contact us."
