trans frontend checkout credit card

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -24,6 +24,8 @@
   "Nomdefamille": "Last Name",
   "Courriel": "Email",
 
+  "Carte de crédit": "Credit Card",
+
   "Commander": "Order",
   "Connexion": "Login",
   "Inscription": "Register",
