--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -24,6 +24,8 @@
   "Nomdefamille": "Nom de famille",
   "Courriel": "Courriel",
 
+  "Carte de crédit": "Carte de crédit",
+
   "Commander": "Commander",
   "Connexion": "Connexion",
   "Inscription": "Inscription",
