i18n + add trans to TopAdvertising

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -24,6 +24,7 @@
   "Nomdefamille": "Last Name",
   "Courriel": "Email",
 
+  "Addapromocode": "Add a promocode",
   "Carte de crédit": "Credit Card",
 
   "Commander": "Order",
