--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -24,6 +24,7 @@
   "Nomdefamille": "Nom de famille",
   "Courriel": "Courriel",
 
+  "Addapromocode": "Ajouter un code promo",
   "Carte de crédit": "Carte de crédit",
 
   "Commander": "Commander",
