--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -3609,3 +3609,24 @@ msgstr "Personnalisations"
 
 msgid "Discount Type"
 msgstr "Type de rabais"
+
+msgid "D-Shop - Your Order"
+msgstr "D-Shop - Votre commande"
+
+msgid "D-Shop - Your Order Is Shipped"
+msgstr "D-Shop - Votre commande est expédiée"
+
+msgid "D-Shop - A New Order Has Arrived"
+msgstr "D-Shop - Une nouvelle commande vient d'arriver"
+
+msgid "Thank you for your order at D-Shop"
+msgstr "Merci d'avoir commandé sur D-Shop"
+
+msgid "Hello, your order"
+msgstr "Bonjour, votre commande"
+
+msgid "has been shipped. We look forward to seeing you again in our online store very soon!"
+msgstr "à bien été expédiée. Au plaisir de vous revoir dans notre boutique en ligne très bientôt !"
+
+msgid "A new order has just been done at D-Shop"
+msgstr "Une nouvelle commande vient d'être effectuée sur D-Shop"
